# edge-bookmarks-organizer

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: backup.rs  bookmark.rs  deadlinks.rs  duplicates.rs  embeddings.rs  error.rs  lib.rs  main.rs  organizer.rs  parser.rs  rebuilder.rs
